2004-10-21  Derek Price  <derek@ximbiot.com>

	* gnulib-update (MODULES): Add xsize module explicitly.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove outdated comment.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to gl_FUNC_GNU_STRFTIME.
	* gnulib-update (MODULES): Add strftime module.
	* srclist.txt: Remove GNULIB strftime module.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to jm_REALLOC.
	* gnulib-update (MODULES): Add realloc module.
	* srclist.txt: Remove GNULIB realloc module.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to jm_MALLOC.
	* gnulib-update (MODULES): Add malloc module.
	* srclist.txt: Remove GNULIB malloc module.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* TODO (22, 31): Remove completed items.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* BUGS: Remove ls assertion failure bug.

2001-10-21  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dep: Regenerated for "../zlib/lib.dsp" change.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* NEWS: Note `cvs ls filename' fix.

2004-10-20  Mark D. Baushke  <mdb@cvshome.org>

	* configure.in (ccvs_FUNC_SELECT): Work around Solaris 7 select()
	hang.
	* Makefile.in, aclocal.m4, config.h.in, configure:
	Regenerate for new configure.in.

2004-10-20  Derek Price  <derek@ximbiot.com>

	* NEWS: Note validate_repo change.

2004-10-19  Derek Price  <derek@ximbiot.com>

	* NEWS: Note resurrection fix.

2004-10-19  Derek Price  <derek@ximbiot.com>

	* HACKING (Portability): Note assumption of sys/stat.h.

2004-10-16  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dsp: Add "lib/vasprintf.h" to project.
	* cvsnt.dep: Regenerate for "cvsnt.dsp" change.
	* cvsnt.mak: Regenerate for "cvsnt.dsp" change.

2004-10-15  Derek Price  <derek@ximbiot.com>

	* gnulib-update (MODULES): Add vasprintf.

2004-10-14  Derek Price  <derek@ximbiot.com>

	* NEWS: Note new import branch verification.
