@@ -26,7 +26,7 @@ MODULES="gettext vasnprintf regex atexit save-cwd dirname exit exitfail
 	 getnline getndelim2 gethostname strcase getpass-gnu gettimeofday
 	 timespec gettime unlocked-io tzset restrict time_r mktime minmax
 	 memmove nanosleep stat lstat strerror vasprintf malloc realloc
-	 strftime xsize"
+	 strftime xsize getpagesize"
 
 # Are the GNULIB sources really where we expect them?
 if test -r $GNULIB && test -d $GNULIB \
